--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/create.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/create.html.twig
@@ -11,8 +11,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="breadcrumb">
-                        <li><a href="{{ path('viettut_bundles_web_home_index') }}">Home</a></li>
-                        <li class="active">Courses</li>
+                        <li><a href="{{ path('home_page') }}">Home</a></li>
+                        <li class="active"><a href="{{ path('course_index') }}">Courses</a></li>
                     </ul>
                 </div>
             </div>
