--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -12,14 +12,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="breadcrumb">
-                        <li><a href="#">Home</a></li>
-                        <li class="active">Pages</li>
+                        <li><a href="{{ path('home_page') }}">Home</a></li>
+                        <li class="active"><a href="{{ path('course_index') }}">Courses</a></li>
                     </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h1>Right Sidebar</h1>
                 </div>
             </div>
         </div>
@@ -168,113 +163,8 @@
                 </div>
             </div>
             <div class="col-md-3">
+                {% include 'sidebar.html' %}
                 <aside class="sidebar">
-                    <div class="tabs">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a href="#popularPosts" data-toggle="tab"><i class="fa fa-star"></i> Popular</a></li>
-                            <li><a href="#recentPosts" data-toggle="tab">Recent</a></li>
-                        </ul>
-                        <div class="tab-content">
-                            <div class="tab-pane active" id="popularPosts">
-                                <ul class="simple-post-list">
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }} " alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Odiosters Nullam Vitae</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="tab-pane" id="recentPosts">
-                                <ul class="simple-post-list">
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-2.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-3.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Odiosters Nullam Vitae</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="post-image">
-                                            <div class="img-thumbnail">
-                                                <a href="blog-post.html">
-                                                    <img src="{{ asset('bundles/viettutweb/img/blog/blog-thumb-1.jpg') }}" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                        <div class="post-info">
-                                            <a href="blog-post.html">Nullam Vitae Nibh Un Odiosters</a>
-                                            <div class="post-meta">
-                                                Jan 10, 2013
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                     <div class="sticky">
                         <h4>Chapters</h4>
                         <div class="list-group">
