--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/index.html.twig
@@ -12,14 +12,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <ul class="breadcrumb">
-                        <li><a href="#">Home</a></li>
-                        <li class="active">Pages</li>
+                        <li><a href="{{ path('home_page') }}">Home</a></li>
+                        <li class="active">Course</li>
                     </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <h1>Right Sidebar</h1>
                 </div>
             </div>
         </div>
@@ -30,7 +25,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="blog-posts">
-                    {% for course in courses %}
+                    {% for course in pagination %}
                         <article class="post post-medium">
                             <div class="row">
                                 <div class="col-md-5">
@@ -42,7 +37,7 @@
                                 </div>
                                 <div class="col-md-7">
                                     <div class="post-content">
-                                        <h2><a href="{{ path('viettut_bundles_web_course_detail', {'hash' : course.hashTag, 'username' : course.author.username}) }}">{{ course.title }}</a></h2>
+                                        <h2><a href="{{ path('course_detail', {'hash' : course.hashTag, 'username' : course.author.username}) }}">{{ course.title }}</a></h2>
                                         <p>{{ course.introduce | first_para }}</p>
                                     </div>
                                 </div>
@@ -52,20 +47,20 @@
                                     <div class="post-meta">
                                         <span><i class="fa fa-calendar"></i>{{ course.createdAt | date("m/d/Y") }}</span>
                                         <span><i class="fa fa-user"></i> By <a href="#">{{ course.author.username }}</a> </span>
-                                        <span><i class="fa fa-tag"></i> <a href="#">Duis</a>, <a href="#">News</a> </span>
+                                        <span><i class="fa fa-tag"></i>
+                                            {% for t in course.courseTags %}
+                                                <a href="#">{{ t.tag.text }}</a>
+                                            {% endfor %}
+                                        </span>
                                         <span><i class="fa fa-comments"></i> <a href="#">{{ course.chapters | length }} Chapters</a></span>
-                                        <a href="blog-post.html" class="btn btn-xs btn-primary pull-right">Read more...</a>
+                                        <a href="{{ path('course_detail', {'hash' : course.hashTag, 'username' : course.author.username}) }}" class="btn btn-xs btn-primary pull-right">Read more...</a>
                                     </div>
                                 </div>
                             </div>
                         </article>
                     {% endfor %}
                     <ul class="pagination pagination-lg pull-right">
-                        <li><a href="#">«</a></li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">»</a></li>
+                        {{ knp_pagination_render(pagination) }}
                     </ul>
 
                 </div>
