redesign home page. Create tutorial

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -119,8 +119,8 @@
                                 <i class="fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="/tutorials">All tutorials</a></li>
-                                <li><a href="/tutorials/create">Write a tutorial</a></li>
+                                <li><a href="{{ path('tutorial_index') }}">All tutorials</a></li>
+                                <li><a href="{{ path('create_tutorial') }}">Write a tutorial</a></li>
                                 <li><a href="#">Search</a></li>
                             </ul>
                         </li>
