--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -38,8 +38,12 @@
                             <div class="post-content">
                                 <h2 class="text-center"><a href="#">{{ course.title }}</a></h2>
                                 <div class="post-meta">
-                                    <span><i class="fa fa-user"></i> By <a href="#">John Doe</a> </span>
-                                    <span><i class="fa fa-tag"></i> <a href="#">Duis</a>, <a href="#">News</a> </span>
+                                    <span><i class="fa fa-user"></i> By <a href="#">{{ course.author.username }}</a> </span>
+                                    <span><i class="fa fa-tag"></i>
+                                        {% for t in course.courseTags %}
+                                            <a href="#">{{ t.tag.text }}</a>
+                                        {% endfor %}
+                                    </span>
                                     <span><i class="fa fa-comments"></i> <a href="#">{{ comments | length }} Comments</a></span>
                                 </div>
                                 <div>{{ course.introduce | markdown }} </div>
@@ -47,7 +51,7 @@
                                     <button class="btn btn-primary btn-lg pull-left">Previous Chapter</button>
                                     <button class="btn btn-primary btn-lg pull-right">Next Chapter</button>
                                 </div>
-                                <div class="row col-md-12" ng-init="currentCourse='{{ course.id }}'">
+                                <div class="row col-md-12">
                                     <div class="post-block post-comments clearfix row col-md-12">
                                         <h3><i class="fa fa-comments"></i>Comments ({{ comments | length }})</h3>
                                         <ul class="comments" ng-hide="commentToggle">
@@ -55,7 +59,7 @@
                                                 <li>
                                                     <div class="comment">
                                                         <div class="img-thumbnail">
-                                                            <img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-2.jpg') }}">
+                                                            <img class="avatar" alt="" src="{{ comment.author.avatar }}">
                                                         </div>
                                                         <div class="comment-block">
                                                             <div class="comment-arrow"></div>
@@ -74,7 +78,7 @@
                                                             {% for reply in comment.replies %}
                                                                 <div class="comment">
                                                                     <div class="img-thumbnail">
-                                                                        <img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-3.jpg') }}">
+                                                                        <img class="avatar" alt="" src="{{ reply.author.avatar }}">
                                                                     </div>
                                                                     <div class="comment-block">
                                                                         <div class="comment-arrow"></div>
@@ -95,7 +99,7 @@
                                             <li ng-repeat="comment in comments">
                                                 <div class="comment">
                                                     <div class="img-thumbnail">
-                                                        <img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-2.jpg') }}">
+                                                        <img class="avatar" alt="avatar" ng-src="<{ comment.author.avatar }>">
                                                     </div>
                                                     <div class="comment-block">
                                                         <div class="comment-arrow"></div>
@@ -113,7 +117,7 @@
                                                     <li ng-repeat="reply in comment.replies">
                                                         <div class="comment">
                                                             <div class="img-thumbnail">
-                                                                <img class="avatar" alt="" src="{{ asset('bundles/viettutweb/img/avatar-3.jpg') }}">
+                                                                <img class="avatar" alt="avatar" ng-src="<{ reply.author.avatar }>">
                                                             </div>
                                                             <div class="comment-block">
                                                                 <div class="comment-arrow"></div>
@@ -181,5 +185,5 @@
 {% endblock %}
 {% block custom %}
     <script src="{{ asset('bundles/viettutweb/js/sticky_sidebar.js') }}"></script>
-    <script src="{{ asset('bundles/viettutweb/js/controller/comment.js') }}"></script>
+    <script src="{{ asset('bundles/viettutweb/js/controller/course/comment.js') }}"></script>
 {% endblock %}
