--- a/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Home/index.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
 {% block controller %}ng-controller="HomeController"{% endblock %}
 {% block main %}
+    <style>
+        .text-auto-wrap {
+            word-wrap: break-word;      /* IE 5.5-7 */
+            white-space: -moz-pre-wrap !important; /* Firefox 1.0-2.0 */
+            white-space: pre-wrap !important;
+        }
+    </style>
     <section class="page-top custom-product">
         <div class="container">
             <div class="row">
@@ -137,32 +144,64 @@
                 </ul>
                 <div class="tab-content">
                     <div id="courses" class="tab-pane active">
-                        <h3>Khóa học tiêu biểu</h3>
-                        <ul class="portfolio-list sort-destination" data-sort-id="portfolio">
-                            {% for c in popularCourses %}
-                                <li class="col-md-4 col-sm-6 col-xs-12 isotope-item websites">
-                                    <div class="portfolio-item img-thumbnail">
-                                        <a href="{{ path('course_detail', {'hash' : c.hashTag, 'username' : c.author.username}) }}" class="thumb-info">
-                                            <img alt="" class="img-responsive" src="{{ c.imagePath }}">
-                                            <span class="thumb-info-title">
-                                                <span class="thumb-info-inner">{{ c.title }}</span>
-                                                <span class="thumb-info-type">{{ c.author.username }}</span>
-                                            </span>
-                                            <span class="thumb-info-action">
-                                                <span title="Universal" class="thumb-info-action-icon"><i class="fa fa-link"></i></span>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                        <div class="span12 pagination-centered">
-                            <button class="btn btn-primary btn-lg pull-right">Read more ...</button>
+                        <div class="container">
+                            <div class="row">
+                                <h3>Khóa học tiêu biểu</h3>
+                                <ul class="portfolio-list sort-destination" data-sort-id="portfolio">
+                                    {% for c in popularCourses %}
+                                        <li class="col-md-4 col-sm-6 col-xs-12 isotope-item websites">
+                                            <div class="portfolio-item img-thumbnail">
+                                                <a href="{{ path('course_detail', {'hash' : c.hashTag, 'username' : c.author.username}) }}" class="thumb-info">
+                                                    <img alt="" class="img-responsive" src="{{ c.imagePath }}">
+                                                    <span class="thumb-info-title">
+                                                        <span class="thumb-info-inner text-auto-wrap">{{ c.title }}</span>
+                                                        <span class="thumb-info-type">{{ c.author.username }}</span>
+                                                    </span>
+                                                    <span class="thumb-info-action">
+                                                        <span title="Universal" class="thumb-info-action-icon"><i class="fa fa-link"></i></span>
+                                                    </span>
+                                                </a>
+                                            </div>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <div class="span12 pagination-centered">
+                                    <a class="btn btn-primary btn-lg pull-right" href="{{ path("course_index") }}">Read more ...</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div id="tutorials" class="tab-pane">
-                        <p>Bài hướng dẫn được quan tâm</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitat.</p>
+                        <div class="container">
+                            <div class="row">
+                                <h3>Bài hướng dẫn được quan tâm</h3>
+                                <ul class="portfolio-list sort-destination" data-sort-id="portfolio">
+                                    {% for tut in popularTutorial %}
+                                        <li class="col-md-4 col-sm-6 col-xs-12 isotope-item websites">
+                                            <div class="portfolio-item img-thumbnail">
+                                                <a href="{{ path('tutorial_detail', {'hash' : tut.hashTag, 'username' : tut.author.username}) }}" class="thumb-info">
+                                                    <img alt="" class="img-responsive" src="{{ asset('bundles/viettutweb/img/projects/project.jpg') }}">
+                                                    <span class="thumb-info-title">
+                                                        <span class="thumb-info-inner text-auto-wrap">{{ tut.title }}</span>
+                                                        <span class="thumb-info-type">{{ tut.author.username }}</span>
+                                                    </span>
+                                                    <span class="thumb-info-action">
+                                                        <span title="Universal" class="thumb-info-action-icon"><i class="fa fa-link"></i></span>
+                                                    </span>
+                                                </a>
+                                            </div>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <div class="span12 pagination-centered">
+                                    <a class="btn btn-primary btn-lg pull-right" href="{{ path('tutorial_index') }}">Read more ...</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
